--- a/src/main/resources/templates/node_manager.html
+++ b/src/main/resources/templates/node_manager.html
@@ -11,7 +11,7 @@
 <link href="../css/common.css" rel="stylesheet" charset="utf-8" />
 <!-- 4 include the jQuery library -->
 <script src="../vender/jQuery/jquery-2.2.3.min.js"></script>
-<script src="../vender/Bootstrap-3-Typeahead/bootstrap3-typeahead.js"></script>
+<script src="../vender/bootstrap-3.3.7-dist/js/bootstrap3-typeahead.js"></script>
 <script src="/webjars/sockjs-client/sockjs.min.js"></script>
 <script src="/webjars/stomp-websocket/stomp.min.js"></script>
 <style>
@@ -104,6 +104,7 @@
 <script th:inline="JavaScript">
     window.redis_path="/Users/lzz/soft_install/redis/redis-cluster/redis01/redis-cli -c -p 8007 ";
     /*<![CDATA[*/
+
     /*]]>*/
 </script>
 </body>
