--- a/src/main/resources/templates/node_manager.html
+++ b/src/main/resources/templates/node_manager.html
@@ -33,13 +33,12 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span id="select-clsuer" data-clusterid="4">cluster4</span> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li class="select-cluster" data-clusterid="1"><a href="#">cluser1</a></li>
+                        <li class="select-cluster" data-clusterid="2"><a href="#">cluser2</a></li>
+                        <li class="select-cluster" data-clusterid="3"><a href="#">cluser3</a></li>
+                        <li class="select-cluster" data-clusterid="5"><a href="#">cluster5</a></li>
                     </ul>
                 </li>
                 <li><a id="add-cluster" class="navbar-brand" href="#"><span class="glyphicon glyphicon-plus-sign"></span></a></li>
@@ -49,28 +48,8 @@
     </div>
 </nav>
 <div class="clearfix nav-height"></div>
-<div class="container-fluid container-title">
-    <div class="container-title-content">
-        <div class="pull-left">
-            <h1>cluster tool</h1>
-            <p>cluster tool manager tool center</p>
-        </div>
-        <div class="pull-right" style="margin-top:55px">
-            <button type="button" id="new-node" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> new-nodes</button>
-            <button type="button" id="node-list" class="btn btn-success"><span class="glyphicon glyphicon-menu-hamburger"></span> node-list</button>
-            <button type="button" id="add-node" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> add-node</button>
-        </div>
-    </div>
-</div>
-<div class="container-fluid" style="margin-bottom:70px">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div id="node-list-div"></div>
-            </div>
-        </div>
-    </div><!-- .row -->
-</div><!-- .container-fluid -->
+
+<div id="node-list-div"></div>
 
 <div class="container-fluid" id="footer">
     <div id="terminal">
