--- a/src/main/resources/templates/monitor_manager2.html
+++ b/src/main/resources/templates/monitor_manager2.html
@@ -140,7 +140,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/node/manager">cluster-manager</a></li>
                 <li><a href="/monitor/manager">monitor</a></li>
-                <li><a href="/monitor/manager2">monitor2</a></li>
+                <li><a class="monitor-info-request" href="/monitor/monitor_info">monitor_info</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -170,30 +170,29 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label class="radio-inline">
-                        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" /> 7 day
+                        <input type="radio" class="monitor-info-request" name="date" value="day" /> 7 day
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" /> 24 hour
+                        <input type="radio" class="monitor-info-request" name="date" value="hour" /> 24 hour
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" /> 60 minute
+                        <input type="radio" class="monitor-info-request" name="date" checked="true" value="minute" /> 60 minute
                     </label>
                 </div>
                 <div class="form-group">
-                    <select class="form-control">
-                        <option>max</option>
-                        <option>max</option>
-                        <option>min</option>
-                        <option>avg</option>
+                    <select name="type" class="monitor-info-request form-control">
+                        <option selected="selected" value="max">max</option>
+                        <option value="min">min</option>
+                        <option value="avg">avg</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control">
-                        <option>all-instance</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                    <select name="node" class="monitor-info-request form-control">
+                        <option selected="selected" value="all">all-instance</option>
+                        <option value="127.0.0.1:8001">127.0.0.1:8001</option>
+                        <option value="127.0.0.1:8002">127.0.0.1:8002</option>
+                        <option value="127.0.0.1:8003">127.0.0.1:8003</option>
+                        <option value="127.0.0.1:8004">127.0.0.1:8004</option>
                     </select>
                 </div>
             </form>
@@ -224,6 +223,7 @@
                 <thead>
                 <tr id="field-title">
                     <th data-field="date">date</th>
+                    <th data-field="used_cpu_sys" class="selected">used_cpu_sys</th>
                     <th data-field="connected_clients">connected_clients</th>
                     <th data-field="blocked_clients">blocked_clients</th>
                     <th data-field="used_memory">used_memory</th>
@@ -251,7 +251,6 @@
                     <th data-field="pubsub_patterns">pubsub_patterns</th>
                     <th data-field="latest_fork_usec">latest_fork_usec</th>
                     <th data-field="migrate_cached_sockets">migrate_cached_sockets</th>
-                    <th data-field="used_cpu_sys">used_cpu_sys</th>
                     <th data-field="used_cpu_user">used_cpu_user</th>
                     <th data-field="used_cpu_sys_children">used_cpu_sys_children</th>
                     <th data-field="used_cpu_user_children">used_cpu_user_children</th>
@@ -260,6 +259,7 @@
                 <tbody>
                 <tr th:each="node : ${result.result}">
                     <td th:text="${node.date}">date</td>
+                    <td th:text="${node.used_cpu_sys}">used_cpu_sys</td>
                     <td th:text="${node.connected_clients}">connected_clients</td>
                     <td th:text="${node.blocked_clients}">blocked_clients</td>
                     <td th:text="${node.used_memory}">used_memory</td>
@@ -287,7 +287,6 @@
                     <td th:text="${node.pubsub_patterns}">pubsub_patterns</td>
                     <td th:text="${node.latest_fork_usec}">latest_fork_usec</td>
                     <td th:text="${node.migrate_cached_sockets}">migrate_cached_sockets</td>
-                    <td th:text="${node.used_cpu_sys}">used_cpu_sys</td>
                     <td th:text="${node.used_cpu_user}">used_cpu_user</td>
                     <td th:text="${node.used_cpu_sys_children}">used_cpu_sys_children</td>
                     <td th:text="${node.used_cpu_user_children}">used_cpu_user_children</td>
@@ -309,13 +308,33 @@
 <script src="../vender/sparrow/pack.js"></script>
 <script src="../vender/sparrow/smarty.js"></script>
 <script src="../vender/sparrow/validate.js"></script>
-<script src="/js/common.js"></script>
+<script src="../js/common.js"></script>
 <script src="../vender/tree/d3.v3.min.js"></script>
 <script th:inline="JavaScript">
     window.redis_path="/Users/lzz/soft_install/redis/redis-cluster/redis01/redis-cli -c -p 8007 ";
     /*<![CDATA[*/
     var data = [[${result}]];
     window.chartData = data.result;
+
+    var monitor_request_data = {};
+    var params = [[${param}]];
+    if( params && typeof(params.date) != "undefined" ){
+        monitor_request_data.date = params.date[0];
+        monitor_request_data.type = params.type[0];
+        monitor_request_data.node = params.node[0];
+        console.log( params );
+    }
+    //如果参数没有传进来就从 cookie 中提取
+    if( typeof(monitor_request_data.date) == "undefined" || monitor_request_data.date == null ){
+        monitor_request_data = get_cookie("monitor_request_data");
+        monitor_request_data = JSON.parse( monitor_request_data );
+    }
+    if( monitor_request_data != null ){
+        $("input:radio[value='"+ monitor_request_data.date +"']").attr('checked', 'true');
+        $("select[name='type']").val( monitor_request_data.type );
+        $("select[name='node']").val( monitor_request_data.node );
+    }
+
     /*]]>*/
 </script>
 <script src="/js/monitor_manager2.js"></script>
