--- a/src/main/resources/templates/node_manager.html
+++ b/src/main/resources/templates/node_manager.html
@@ -30,7 +30,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/node/manager">cluster-manager</a></li>
                 <li><a href="/monitor/manager">monitor</a></li>
-                <li><a href="/monitor/manager2">monitor2</a></li>
+                <li><a href="/monitor/monitor_info">monitor_info</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
