--- a/src/main/resources/templates/monitor_manager.html
+++ b/src/main/resources/templates/monitor_manager.html
@@ -45,6 +45,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
             <ul class="nav navbar-nav">
+                <li><a href="/docker/manager">docker-manager</a></li>
                 <li><a href="/node/manager">cluster-manager</a></li>
                 <li><a href="/monitor/manager">monitor</a></li>
                 <li><a href="/monitor/monitor_info">monitor_info</a></li>
