--- a/src/main/resources/templates/node_manager.html
+++ b/src/main/resources/templates/node_manager.html
@@ -8,12 +8,15 @@
 <link href="../vender/sparrow/sparrow.css" rel="stylesheet" charset="utf-8" />
 
 <link href="../vender/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" charset="utf-8" />
+<link href="../vender/bootstrap-fileinput/fileinput.css" rel="stylesheet" charset="utf-8" />
 <link href="../css/common.css" rel="stylesheet" charset="utf-8" />
 <!-- 4 include the jQuery library -->
 <script src="../vender/jQuery/jquery-2.2.3.min.js"></script>
 <script src="../vender/bootstrap-3.3.7-dist/js/bootstrap3-typeahead.js"></script>
 <script src="/webjars/sockjs-client/sockjs.min.js"></script>
 <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+<script src="../vender/bootstrap-fileinput/fileinput.js"></script>
+<script src="../vender/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <style>
 
 </style>
